// Copyright 2018 VMware, all rights reserved
//
// Internal storage definition.

package com.vmware.athena.kvb;

message Block {
   optional int64 version = 1;
   optional int64 number = 2;
   optional bytes hash = 3;             // 32 bytes
   optional bytes parent_hash = 4;      // 32 bytes
   repeated bytes transaction = 5;      // 32 bytes
}

message Transaction {
   optional int64 version = 1;
   optional int64 block_number = 2;
   optional int64 nonce = 3;
   optional bytes block_hash = 4;       // 32 bytes
   optional bytes from = 5;             // 20 bytes
   optional bytes to = 6;               // 20 bytes
   optional bytes contract_address = 7; // 20 bytes
   optional bytes input = 8;
   optional int64 status = 9;
   optional int64 value = 10;           // 32 bytes
}

message Balance {
   optional int64 version = 1;
   // TODO: balance should be uint256be
   optional int64 balance = 2;          // 32 bytes
}
